kub-22/deploy-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-dp-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-front
  template:
    metadata:
      labels:
        app: nginx-front
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
