kub-22/pod-ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
spec:
  containers:
    - image: ubuntu
      name: ubuntu
      resources:
        requests:
          cpu: 100m
          memory: 128Mi
        limits:
          cpu: 200m
          memory: 128Mi
      command: ["/bin/bash"]
      args: ["-c", "while true; do echo Hello `date`; sleep 100; done"]
