kub-22/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-back
spec:
  # ClusterIP (default), NodePort, LoadBalancer
  type: ClusterIP
  selector:
    app: nginx-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
