kub-22/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-front
spec:
  # ClusterIP (default), NodePort, LoadBalancer
  type: ClusterIP
  selector:
    app: nginx-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
