kub-22/svc-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-internal
spec:
  # ClusterIP (default), NodePort, LoadBalancer
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
