kub-22/ing-back.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: back
  namespace: default
spec:
  rules:
    - host: kuback.d87.ru
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-back
              servicePort: 80
          - path: /front
            backend:
              serviceName: nginx-front
              servicePort: 80
